# forensai

./: .env.example  .gitignore  .vercelignore  app.py  config.py  prompts.py  pyproject.toml  requirements.txt  run.bat  test_apis.py
analyzers/: compare.py  forensic_engine.py  gemini_client.py  image_forensics.py  linguistic.py  osint.py  plagiarism.py  segment_analysis.py  text_heuristics.py  verdict_calibrator.py  video_forensics.py
scripts/: vercel_build.py
services/: account_local.py  account_store.py  auth.py  supabase_db.py
static/: index.html
static/css/: style.css
static/js/: account.js  app.js  auth.js  i18n.js
supabase/migrations/: 001_profiles.sql
