[project]
name = "forensai"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.8.3",
    "openai>=1.55.0",
    "Pillow>=11.0.0",
    "supabase>=2.10.0",
    "PyJWT>=2.9.0",
]

[tool.vercel]
entrypoint = "app:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
